@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Use undef_method with a single argument in SecurePay to prevent JRuby from choking on it. [jonathan.l.bartlett]
+#
 # * Default address_override to 0 for PayPal Website Payments Standard payments. [cody]
 #
 # * Enhance credit card error messages [manfred]
